# bf

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml  pages.yml
benches/: interpreter.rs  interprinter.rs  optimize.rs  parse.rs  to_wasm.rs
bf/: Cargo.toml
bf-cmd/: Cargo.toml
bf-cmd/src/: main.rs
bf/benches/: interpreter.rs  interprinter.rs  optimize.rs  parse.rs  to_wasm.rs
bf/src/: error.rs  graph.rs  instruction.rs  interpreter.rs  interprinter.rs  ir.rs  lib.rs  opt.rs  optimize.rs  parse.rs  transcompile.rs  transpile.rs  utils.rs
bf/src/interpreter/: memory.rs
bf/src/transcompile/: wasm.rs
bf/src/transcompile/wasm/: opt.rs  wasm_binary.rs
bf/src/transcompile/wasm/wasm_binary/: code.rs  section.rs  type_.rs  var.rs
bf/src/transpile/: wasm.rs
bf/src/transpile/wasm/: opt.rs  wasm_binary.rs
bf/src/transpile/wasm/wasm_binary/: code.rs  type_.rs  var.rs
bf_codes/: pi16.out
src/: instruction.rs  interpreter.rs  interprinter.rs  ir.rs  lib.rs  main.rs  opt.rs  optimize.rs  parse.rs  token.rs  transcompile.rs  transpile.rs  utils.rs
src/interpreter/: memory.rs  mod.rs
src/optimize/: copy.rs  copy_rev.rs  merge.rs  mod.rs  move_add.rs  move_add_rev.rs  move_sub.rs  move_sub_rev.rs  mul_add.rs  mul_add_rev.rs  set_value.rs  sub_copy.rs  zeroset.rs
src/optimize_new_node/: mod.rs
src/transpile/: mod.rs  wasm.rs
src/transpile/wasm/: wasm_binary.rs
src/transpile/wasm/wasm_binary/: code.rs  leb128.rs  section.rs  type_.rs  var.rs
web/: package-lock.json  package.json  webpack.config.js
web/src/: index.js  worker.js
web/src/html/: index.html
