[package]
name = "bf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bff"
path = "src/main.rs"

[dependencies]
chumsky = "1.0.0-alpha.2"
leb128 = "0.2.5"
thiserror = "1.0.30"
anyhow = "1.0.56"
clap = { version = "4.3.19", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.16"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.84"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
rstest = { version = "0.15.0", default-features = false }
