[package]
name = "bf-cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "bf"

[dependencies]
anyhow = "1.0.56"
bf = {path = "../bf"}
clap = { version = "3.1.8", features = ["derive", "env"] }
env_logger = "0.9.0"
log = "0.4.16"
