[package]
edition = "2021"
name = "bf"
version = "0.1.2"
authors = ["hotate29 <hotate_oc@yahoo.co.jp>"]
repository = "https://github.com/hotate29/bf"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
leb128 = "0.2.5"
log = "0.4.16"
serde = {version = "1.0.134", features = ["derive"]}
serde_json = "1.0.76"
thiserror = "1.0.30"
wasm-bindgen = "0.2.82"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
rstest = {version = "0.15.0", default-features = false}
